syntax = "proto3";

package core;

message Room {
    string id = 1;    
    int64 started_at = 2;
    int64 updated_at = 3;
    uint32 num_participants = 4;
    // max duration in seconds
    uint32 max_duration = 5;
}

message Participant {
    string id = 1;
    string name = 2;
    ParticipantPermissions permissions = 3;
}

message ParticipantPermissions {
    bool room_admin = 1;
}